--- a/vue-webpack-boilerplate/package.json
+++ b/vue-webpack-boilerplate/package.json
@@ -8,8 +8,10 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
+    "@vue/compiler-sfc": "^3.2.16",
     "autoprefixer": "^10.3.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
@@ -23,7 +25,8 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "webpack-dev-server": "^4.2.1",
+    "copy-webpack-plugin": "^9.0.1"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4"
