--- a/react-webpack-boilerplate/package.json
+++ b/react-webpack-boilerplate/package.json
@@ -25,6 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
     "style-loader": "^3.0.0",
+    "swr": "^1.0.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
