--- a/vue3-practice/boilerplate/babel.config.json
+++ b/vue3-practice/boilerplate/babel.config.json
@@ -1,10 +1,24 @@
 {
   "presets": [
-    "@babel/preset-env"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [ 
+            "> 1%", 
+            "last 2 versions", 
+            "IE >= 10" 
+          ]
+        }
+      }
+    ]
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime", {
-      "corejs": 3
-    }]
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 3
+      }
+    ]
   ]
 }
