--- a/vue3-practice/boilerplate/package.json
+++ b/vue3-practice/boilerplate/package.json
@@ -10,18 +10,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/runtime-corejs3": "^7.15.4",
-    "@vue/compiler-sfc": "^3.2.19",
+    "@vue/compiler-sfc": "^3.2.20",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
@@ -34,6 +30,7 @@
     "postcss": "^8.3.9",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
+    "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "vue-loader": "^16.8.1",
     "vue-style-loader": "^4.1.3",
@@ -42,8 +39,10 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "vue": "^3.2.19",
-    "vue-router": "^3.5.2",
+    "@babel/runtime": "^7.15.4",
+    "interactjs": "^1.10.11",
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   }
 }
