todolist redux 적용 1. Redux의 3가지 원칙에 의거하여 스토어 구현 2. Redux-persist를 도입하여 로컬스토리지, 세션스토리지 저장 구현 3. Redux-logger, redux devtools extension 등의 유틸 기능 탑재

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "babel-eslint": "^10.1.0"
   },
   "dependencies": {
     "@craco/craco": "^6.4.0",
-    "@emotion/react": "^11.5.0"
+    "@emotion/react": "^11.5.0",
+    "redux-logger": "^3.0.6"
   }
 }
