--- a/typescript-todo/package.json
+++ b/typescript-todo/package.json
@@ -16,7 +16,11 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
@@ -62,6 +66,8 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
-    "@types/uuid": "^8.3.1"
+    "@types/redux-persist": "^4.3.1",
+    "@types/uuid": "^8.3.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
