style: useAsyncFn 동작 원리 주석 설명, feat: axios practice setting
1. useAsyncFn의 동작 원리를 해당 모듈의 윗부분에 주석으로 달아 놓는다.
2. axios를 이용한 연습에 활용하기 위한 초기 설정을 진행한다.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
+    "react-router": "^6.0.1",
+    "react-router-dom": "^6.0.1",
     "redux-logger": "^3.0.6"
   }
 }
