--- a/next-js-practice/package.json
+++ b/next-js-practice/package.json
@@ -13,6 +13,7 @@
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "axios": "^0.24.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
