--- a/react-webpack-ts-boilerplate/.prettierrc
+++ b/react-webpack-ts-boilerplate/.prettierrc
@@ -1,7 +1,12 @@
 {
-  "printWidth": 120,
+  "printWidth": 80,
   "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "semi": true
+  "quoteProps": "consistent",
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
