--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.5.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "socket.io": "^4.3.2"
   }
 }
