--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
+    "axios": "^0.24.0",
+    "next": "^12.0.4",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
     "redux-logger": "^3.0.6",
