--- a/matter_tutorial/package.json
+++ b/matter_tutorial/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "matter-js": "^0.18.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "poly-decomp": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
