chore: zero-install 설정 및 기타 세부 설명 추가

--- a/matter_tutorial/package.json
+++ b/matter_tutorial/package.json
@@ -43,9 +43,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JengYoung/No-Hesitation.git"
-  },
-  "keywords": [],
-  "author": "JengYoung",
-  "license": "ISC"
+    "url": "git+https://github.com/JengYoungLab.git"
+  }
 }
