--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.5.0",
     "axios": "^0.24.0",
+    "dotenv": "^16.0.0",
     "next": "^12.0.4",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
