--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.3",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@craco/craco": "^6.4.0",
@@ -17,5 +18,8 @@
     "react-router-dom": "^6.0.1",
     "redux-logger": "^3.0.6",
     "socket.io": "^4.3.2"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
