:package: add scripts in package.json

--- a/monorepo-cra/package.json
+++ b/monorepo-cra/package.json
@@ -4,6 +4,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn workspace @jengyoungs/app start",
+    "start:lerna": "lerna run start --scope=@jengyoungs/app"
+  },
   "workspaces": [
     "jengyoungs/*"
   ],
