--- a/monorepo-yarn-berry/tsconfig.base.json
+++ b/monorepo-yarn-berry/tsconfig.base.json
@@ -4,7 +4,7 @@
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -14,9 +14,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react"
   },
-  "extends": "../../tsconfig.base.json",
-  "include": ["./src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
 }
