--- a/js-metaball/package.json
+++ b/js-metaball/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^18.11.0",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
