--- a/js-metaball/package.json
+++ b/js-metaball/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "0.7.5",
     "@types/node": "^18.11.0",
     "sass": "^1.55.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.8.4",
     "vite": "^3.1.0"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "@types/gl-matrix": "^3.2.0",
+    "dat.gui": "0.7.5",
+    "gl-matrix": "3.2.0",
+    "lodash": "4.17.11"
+  }
 }
