--- a/zoom-clone/package.json
+++ b/zoom-clone/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.2",
     "pug": "^3.0.2",
     "socket.io": "^4.6.1",
