--- a/zoom-clone/package.json
+++ b/zoom-clone/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.2",
+    "localtunnel": "^2.0.2",
     "pug": "^3.0.2",
     "socket.io": "^4.6.1",
     "ws": "^8.13.0"
